[metadata]
name = plotAnalyzer-drk98
version = 0.0.2
author = Daniel Kramer
author_email = drkspace@gmail.com
description = Tool for categorizing many figures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/drk98/plotAnalyzer
project_urls =
    Bug Tracker = https://github.com/drk98/plotAnalyzer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    beautifulsoup4~=4.10.0
    requests~=2.27.1
    pdf2image~=1.16.0
    setuptools~=60.9.3
    pillow~=9.0.1
python_requires = >=3.6
zip_safe = no

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    plotAnalyzer = plotAnalyzer.main:main